# Master-Thesis

./: CMakeLists.txt  README.txt  config.h.cmake  dune.module  masterarbeit.pc.in
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/masterarbeit/: CMakeLists.txt  masterarbeit.hh
src/: CMakeLists.txt  assembly.hpp  grids.hpp  iterative_solvers.hpp  masterarbeit.cc  norms.hpp  stabilisation_term.hpp  util.hpp
